--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "@rollup/plugin-node-resolve": "^15.2.3",
     "rollup": "^4.9.4",
     "rollup-plugin-livereload": "^2.0.5",
+    "rollup-plugin-postcss": "^4.0.2",
     "rollup-plugin-svelte": "^7.1.6",
     "sirv-cli": "^2.0.2"
   },
